# agile_archer

./: Cargo.toml  README.md
resources/: assets.json  map.tmx
src/: loader.rs  main.rs  spritesheet.rs
src/components/: animation_sheet.rs  camera.rs  enemy.rs  energy_bar.rs  game_state.rs  highlight_tile.rs  input.rs  mod.rs  player.rs  sprite.rs  tile_data.rs  transform.rs
src/math/: astar.rs
src/renderer/: basic.rs  mod.rs  tiled.rs
src/renderer/shaders/: basic.glslv  tilemap.glslf  tilemap.glslv
src/systems/: animation_system.rs  energy_ui.rs  mod.rs  player_movement.rs  process_turn.rs
src/types/: mod.rs  turn.rs
src/utils/: mod.rs  movement.rs  tiled.rs
