[package]
name = "agile_archer"
version = "0.1.0"
authors = ["Aaron McLeod <aaron.g.mcleod@gmail.com>"]

[dependencies]
specs = "0.9.3"
glutin = "0.9.2"
gfx = "0.16.1"
gfx_window_glutin = "0.17.0"
cgmath = "0.14.0"
image = "0.14.0"
genmesh = "0.4"
tiled = "0.6.0"
serde_json = "1.0.2"
serde_derive = "1.0.8"
serde = "1.0.8"
linked-hash-map = "0.4.2"